my first program

--- a/firstprogram.html
+++ b/firstprogram.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <b>my first program</b>
     <script src="first program.js"></script>
   </body>
 </html>
